src/test/deca/context/valid/ClassMathode30.deca
// Description:
//    teste class methode set and get
// Resultats:
//    OK
// 
// Historique:
//    cree le 01/01/2022
class FctRecurr{  
  
    int a=1;
    void setA(int a){
        a=a;
    }
    int getA(){
        return a;
    }
 
}

{
    FctRecurr rec=new FctRecurr();
    rec.setA(500);
    print(rec.getA());

}
