src/test/deca/context/invalid/classmethode10.deca
class A{
    int a;
    int methode(){
        return ;
    }
}

{
    A a=new A();

    
}